--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,5 @@
-build:
-  docker:
-    web: src/docker/Dockerfile
-# run:
-#   web: java -jar target/herokuApp.jar
+# build:
+#   docker:
+#     web: src/docker/Dockerfile
+run:
+  web: java -jar herokuApp.jar
